--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "roast-my-fridge",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0"
   }
