--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
-  "outputDirectory": "public",
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" }
+  "version": 2,
+  "builds": [
+    { "src": "public/**", "use": "@vercel/static" },
+    { "src": "api/roast.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/roast", "dest": "/api/roast.js" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
