--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "public/**", "use": "@vercel/static" },
-    { "src": "api/roast.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/api/roast", "dest": "/api/roast.js" },
-    { "src": "/(.*)", "dest": "/public/$1" }
-  ]
+  "version": 2
 }
